--- a/jungle-provider/pom.xml
+++ b/jungle-provider/pom.xml
@@ -9,7 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jungle-web</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>jungle-provider</artifactId>
 
+    <modules>
+        <module>jungle-user</module>
+    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.nightriver</groupId>
+            <artifactId>jungle-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
