--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,10 @@
         <module>jungle-config</module>
         <module>jungle-eureka</module>
         <module>jungle-admin</module>
-        <module>jungle-user</module>
+        <module>jungle-provider</module>
         <module>jungle-web</module>
+        <module>jungle-provider-api</module>
+        <module>jungle-provider</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
