--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 ##ignore this file##
 /.idea/
+*.iml
+SQL/
+jungle-admin/src/
+jungle-common/target/
+jungle-config/target/
+jungle-eureka/target/
+jungle-gateway/target/
