--- a/jungle-eureka/src/main/resources/application.yml
+++ b/jungle-eureka/src/main/resources/application.yml
@@ -1,21 +1,30 @@
 spring:
   application:
-    name: EurekaServer
+    name: jungle-eureka
+
+  # 安全认证的配置
+  security:
+    basic:
+      enabled: false
+    user:
+      name: admin  # 用户名
+      password: 123456   # 用户密码
+server:
+  port: 8761
 eureka:
   instance:
     #单机hostname: localhost
-    hostname: eureka7002.com         #eureka服务端的实例名称
+    hostname: localhost        #eureka7002.com  eureka服务端的实例名称
   client:
     register-with-eureka: false     #false表示不向注册中心注册自己。
     fetch-registry: false           #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
-    service-url:
+    serviceUrl:
       #单机设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
       #defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
       #Eureka高复用时设置其他的Eureka之间通信
       #defaultZone: http://eureka7003.com:7003/eureka/,http://eureka7004.com:7004/eureka/
-      defaultZone: http://localhost:8000/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
     #server:
     #enable-self-preservation: false   #Eureka服务端关闭心跳连接测试
-server:
-  port: 8000
+
