--- a/jungle-provider/pom.xml
+++ b/jungle-provider/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>jungle-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
     </dependencies>
 </project>
