--- a/jungle-gateway/src/main/resources/application.yml
+++ b/jungle-gateway/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8040
+  port: 80
 spring:
   application:
     name: jungle-gateway
@@ -8,7 +8,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone:localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka
   instance:
     ip-address: true
 zuul:
@@ -16,3 +16,4 @@ zuul:
   # ignoredServices: '*'
   routes:
     jungle-user: /user/**
+    jungle-web: /web/**
