初始化article的Service和Controller层

--- a/jungle-web/src/main/resources/application.yml
+++ b/jungle-web/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
     expose-session-attributes: true
     request-context-attribute: request
     suffix: .ftl
+  mvc:
+    static-path-pattern: /static/**
 eureka:
   client:
     serviceUrl:
