--- a/jungle-provider-api/pom.xml
+++ b/jungle-provider-api/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>jungle-user-api</module>
+        <module>jungle-article-api</module>
     </modules>
     <dependencies>
         <dependency>
