--- a/jungle-provider/jungle-article/pom.xml
+++ b/jungle-provider/jungle-article/pom.xml
@@ -9,18 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jungle-user</artifactId>
-<dependencies>
-    <dependency>
-        <artifactId>jungle-common</artifactId>
-        <groupId>com.nightriver</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-mail</artifactId>
-    </dependency>
-
-</dependencies>
-
+    <artifactId>jungle-article</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-hadoop</artifactId>
+            <version>2.5.0.RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
