实体类增加toString方法

--- a/jungle-gateway/src/main/resources/application.yml
+++ b/jungle-gateway/src/main/resources/application.yml
@@ -17,3 +17,6 @@ zuul:
   routes:
     jungle-user: /user/**
     jungle-web: /web/**
+    static:
+      path: /static/**
+      url: http://localhost:9002/static/
