--- a/jungle-web/pom.xml
+++ b/jungle-web/pom.xml
@@ -28,6 +28,23 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <dependency>
+        <groupId>org.apache.shiro</groupId>
+        <artifactId>shiro-spring</artifactId>
+        <version>1.4.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.apache.shiro</groupId>
+        <artifactId>shiro-ehcache</artifactId>
+        <version>1.4.0</version>
+    </dependency>
+    <dependency>
+        <groupId>com.nightriver</groupId>
+        <artifactId>jungle-user-api</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
 
 </project>
