--- a/jungle-common/src/main/resources/bootstrap.yml
+++ b/jungle-common/src/main/resources/bootstrap.yml
@@ -4,7 +4,9 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  devtools:
+    restart:
+      enabled: false
   thymeleaf:
     cache: false
     mode: LEGACYHTML5
