--- a/jungle-gateway/pom.xml
+++ b/jungle-gateway/pom.xml
@@ -16,5 +16,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.nightriver</groupId>
+            <artifactId>jungle-user-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
