--- a/jungle-gateway/src/main/resources/application.yml
+++ b/jungle-gateway/src/main/resources/application.yml
@@ -20,3 +20,5 @@ zuul:
     static:
       path: /static/**
       url: http://localhost:9002/static/
+  sensitive-headers:
+  add-host-header: true
