--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>jungle-provider-api</module>
         <module>jungle-provider</module>
         <module>jungle-web</module>
+        <module>jungle-sso</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -74,6 +75,18 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.session</groupId>-->
+            <!--<artifactId>spring-session-data-redis</artifactId>-->
+            <!--&lt;!&ndash;<version>2.0.0.RELEASE</version>&ndash;&gt;-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-redis</artifactId>-->
+            <!--<version>1.4.7.RELEASE</version>-->
+        <!--</dependency>-->
+
         <!--<dependency>-->
             <!--<groupId>org.springframework.security</groupId>-->
             <!--<artifactId>spring-security-test</artifactId>-->
