整合文件上传day1

--- a/jungle-gateway/src/main/resources/application.yml
+++ b/jungle-gateway/src/main/resources/application.yml
@@ -16,6 +16,7 @@ zuul:
   # ignoredServices: '*'
   routes:
     jungle-user: /user/**
+    jungle-article: /article/**
     jungle-web: /web/**
     static:
       path: /static/**
