--- a/jungle-provider/jungle-user/src/main/resources/application.yml
+++ b/jungle-provider/jungle-user/src/main/resources/application.yml
@@ -35,3 +35,10 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+#七牛云
+qiniu:
+  accessKey: 4m0UMJhUKqJhbARflthYfPv4n9tgHpjo8xfH2OSN
+  secretKey: grwq64DWBbnt_vIBsiXIF6NCECqIbvjRwz2RI8f9
+  bucket: jungle
+  path: http://idv093d.qiniudns.com
