整合七牛云上传头像

--- a/jungle-provider/jungle-user/src/main/resources/application.yml
+++ b/jungle-provider/jungle-user/src/main/resources/application.yml
@@ -41,4 +41,4 @@ qiniu:
   accessKey: 4m0UMJhUKqJhbARflthYfPv4n9tgHpjo8xfH2OSN
   secretKey: grwq64DWBbnt_vIBsiXIF6NCECqIbvjRwz2RI8f9
   bucket: jungle
-  path: http://idv093d.qiniudns.com
+  path: http://poyxf28eo.bkt.clouddn.com
