--- a/jungle-web/pom.xml
+++ b/jungle-web/pom.xml
@@ -34,7 +34,11 @@
         <artifactId>shiro-spring</artifactId>
         <version>1.4.0</version>
     </dependency>
-
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+        <optional>true</optional>
+    </dependency>
     <dependency>
         <groupId>org.apache.shiro</groupId>
         <artifactId>shiro-ehcache</artifactId>
@@ -43,6 +47,12 @@
     <dependency>
         <groupId>com.nightriver</groupId>
         <artifactId>jungle-user-api</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.nightriver</groupId>
+        <artifactId>jungle-article-api</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <scope>compile</scope>
     </dependency>
