--- a/jungle-web/src/main/resources/application.yml
+++ b/jungle-web/src/main/resources/application.yml
@@ -23,3 +23,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          strategy: SEMAPHORE
