--- a/jungle-common/src/main/resources/bootstrap.yml
+++ b/jungle-common/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/jungle?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&autoReconnect=false
+    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&autoReconnect=false
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
