--- a/jungle-common/src/main/resources/bootstrap.yml
+++ b/jungle-common/src/main/resources/bootstrap.yml
@@ -10,8 +10,9 @@ spring:
   thymeleaf:
     cache: false
     mode: LEGACYHTML5
-#  redis:
-#    host:  xxx.xxx.x.xx
+  redis:
+    host:  localhost
+    port: 6379
 #    database: 8
 #    jedis:
 #      pool:
