整合熔断hystrix,docker部署

--- a/jungle-provider/jungle-article/src/main/resources/application.yml
+++ b/jungle-provider/jungle-article/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 spring:
   application:
     name: jungle-article
-  profiles:
-    active: dev
+  profiles: docker
   datasource:
     username: root
     password: root
