--- a/jungle-provider/jungle-user/src/main/resources/application.yml
+++ b/jungle-provider/jungle-user/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
   application:
     name: jungle-user
-  profiles:
-    active: dev
+  profiles: docker
+#  profiles:
+#    active: dev
   datasource:
     username: root
     password: root
