--- a/jungle-common/src/main/resources/bootstrap.yml
+++ b/jungle-common/src/main/resources/bootstrap.yml
@@ -20,7 +20,11 @@ spring:
 #        min-idle: 1
 #        max-idle: 1
 #        max-wait: -1
-
+  elasticsearch:
+    jest:
+      uris:
+        - http://localhost:9200  # ES服务器的地址！
+      read-timeout: 5000
 mybatis:
   typeAliasesPackage: com.nightriver.jungle.common.pojo
   mapper-locations: classpath:mapping/*.xml
