--- a/jungle-config/src/main/resources/application.yml
+++ b/jungle-config/src/main/resources/application.yml
@@ -11,8 +11,11 @@ spring:
           #git 仓库的地址
           uri: https://github.com/hyz951226/jungle.git
           #git 仓库的账号密码
-          username: hyz951226
-          password: hyz804762373
+          username:
+          password:
+          #配置文件所在的目录
+          search-paths: /jungle-common/**
+      label: master
 #加入注册中心，实现高可用
 eureka:
   client:
