--- a/jungle-provider/jungle-article/src/main/resources/application.yml
+++ b/jungle-provider/jungle-article/src/main/resources/application.yml
@@ -5,6 +5,13 @@ spring:
   datasource:
     username: root
     password: root
+    #zipkin管理端微服务的地址
+  zipkin:
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+      #抓取100%的日志,一般在开发环境，该值设置为1，生产环境视情况而定
+      probability: 1.0
 server:
   port: 9003
 eureka:
