--- a/jungle-provider/jungle-user/src/main/resources/application.yml
+++ b/jungle-provider/jungle-user/src/main/resources/application.yml
@@ -1,12 +1,9 @@
 spring:
   application:
     name: jungle-user
-  profiles: docker
+#  profiles: docker
 #  profiles:
 #    active: dev
-  datasource:
-    username: root
-    password: root
   mail:
     host: smtp.163.com
     from: hyz804762373@163.com
@@ -20,19 +17,4 @@ spring:
           starttls:
             enable: true
             required: true
-  jpa:
-    database: mysql
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-      naming:
-        strategy: org.hibernate.cfg.DefaultComponentSafeNamingStrategy
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
-server:
-  port: 9001
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+
