--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>jungle-provider</module>
         <module>jungle-web</module>
         <module>jungle-sso</module>
+        <module>jungle-zipkin</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
