--- a/jungle-common/src/main/resources/application-dev.yml
+++ b/jungle-common/src/main/resources/application-dev.yml
@@ -23,19 +23,19 @@ spring:
   elasticsearch:
     jest:
       uris:
-        - # ES·şÎñÆ÷µÄµØÖ·£¡
+        - # ES
         - http://localhost:9200
       read-timeout: 5000
 mybatis:
   typeAliasesPackage: com.nightriver.jungle.common.pojo
   mapper-locations: classpath:mapping/*.xml
-#ÆßÅ£ÔÆ
+#ä¸ƒç‰›äº‘
 qiniu:
   accessKey: 4m0UMJhUKqJhbARflthYfPv4n9tgHpjo8xfH2OSN
   secretKey: grwq64DWBbnt_vIBsiXIF6NCECqIbvjRwz2RI8f9
   bucket: jungle
   path: http://poyxf28eo.bkt.clouddn.com
-# ´òÓ¡SQLÓï¾ä
+# æ‰“å°sqlæ—¥å¿—
 logging:
   level:
     com:
