--- a/jungle-eureka/pom.xml
+++ b/jungle-eureka/pom.xml
@@ -15,5 +15,9 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-server</artifactId>
+        </dependency>
     </dependencies>
 </project>
