--- a/jungle-provider/jungle-user/src/main/resources/application.yml
+++ b/jungle-provider/jungle-user/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 #  profiles:
 #    active: dev
   rabbitmq:
-    host: localhost
+    host: 192.168.176.128
     port: 5672
     username: root
     password: root
