--- a/jungle-sso/pom.xml
+++ b/jungle-sso/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>jungle-sso</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+    </dependencies>
 </project>
