--- a/jungle-config/src/main/resources/application.yml
+++ b/jungle-config/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       trace:
         enabled: true
   rabbitmq:
-    host: 192.168.176.128
+    host: localhost
     port: 5672
     username: root
     password: root
