--- a/jungle-provider/pom.xml
+++ b/jungle-provider/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>jungle-user</module>
         <module>jungle-article</module>
+        <module>jungle-comments</module>
     </modules>
     <dependencies>
         <dependency>
@@ -26,10 +27,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-bus-amqp</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
