--- a/jungle-provider/jungle-article/pom.xml
+++ b/jungle-provider/jungle-article/pom.xml
@@ -11,7 +11,6 @@
 
     <artifactId>jungle-article</artifactId>
     <dependencies>
-
         <dependency>
             <artifactId>jungle-common</artifactId>
             <groupId>com.nightriver</groupId>
@@ -21,10 +20,22 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
