--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,11 @@
         <!--<scope>runtime</scope>-->
         <!--</dependency>-->
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>21.0</version>
-        </dependency>
+         <dependency>
+           <groupId>com.google.guava</groupId>
+           <artifactId>guava</artifactId>
+           <version>[24.1.1,)</version>
+         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
