--- a/jungle-dev.yml
+++ b/jungle-dev.yml
@@ -30,15 +30,15 @@ mybatis:
   mapper-locations: classpath:mapping/*.xml
 #七牛云
 qiniu:
-  accessKey: 4m0UMJhUKqJhbARflthYfPv4n9tgHpjo8xfH2OSN
-  secretKey: grwq64DWBbnt_vIBsiXIF6NCECqIbvjRwz2RI8f9
+  accessKey: 
+  secretKey: 
   bucket: jungle
   path: http://poyxf28eo.bkt.clouddn.com
 # 打印SQL语句
 logging:
   level:
     com:
-      pqtel:
-        pqcloud:
-          core:
+      nightriver:
+        jungle:
+          common:
             dao: debug
